// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generate(): structural invariants stable output: same input → byte-for-byte identical 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-//pdf2calendar//EN
CALSCALE:GREGORIAN
METHOD:PUBLISH
BEGIN:VTIMEZONE
TZID:Europe/Zurich
X-LIC-LOCATION:Europe/Zurich
BEGIN:STANDARD
DTSTART:19961027T030000
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
TZNAME:CET
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:19810329T020000
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
TZNAME:CEST
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
UID:0123456789abcdef-20260415-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260415T071500
DTEND;TZID=Europe/Zurich:20260415T173000
SUMMARY:Day shift\\, unit 2
DESCRIPTION:Source: test.pdf\\nUploaded: 2026-04-15 10:30 UTC\\nView your row
 : https://pdf2calendar.example.com/source/0123456789abcdef0123456789abcdef
 0123456789abcdef0123456789abcdef/0123456789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260418-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260418T200000
DTEND;TZID=Europe/Zurich:20260419T083000
SUMMARY:Night shift\\, units 1-3 (weekend)
DESCRIPTION:Source: test.pdf\\nUploaded: 2026-04-15 10:30 UTC\\nView your row
 : https://pdf2calendar.example.com/source/0123456789abcdef0123456789abcdef
 0123456789abcdef0123456789abcdef/0123456789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
END:VCALENDAR
"
`;

exports[`generate(): integration with parser two-month PDF: Klug, J round-trips through generate 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-//pdf2calendar//EN
CALSCALE:GREGORIAN
METHOD:PUBLISH
BEGIN:VTIMEZONE
TZID:Europe/Zurich
X-LIC-LOCATION:Europe/Zurich
BEGIN:STANDARD
DTSTART:19961027T030000
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
TZNAME:CET
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:19810329T020000
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
TZNAME:CEST
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
UID:0123456789abcdef-20260323-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260323T200000
DTEND;TZID=Europe/Zurich:20260324T081500
SUMMARY:Night shift\\, units 1-3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260324-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260324T200000
DTEND;TZID=Europe/Zurich:20260325T081500
SUMMARY:Night shift\\, units 1-3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260325-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260325T200000
DTEND;TZID=Europe/Zurich:20260326T081500
SUMMARY:Night shift\\, units 1-3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260326-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260326T200000
DTEND;TZID=Europe/Zurich:20260327T081500
SUMMARY:Night shift\\, units 1-3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260330-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260330T071500
DTEND;TZID=Europe/Zurich:20260330T203000
SUMMARY:Long shift\\, unit 2
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260402-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260402T071500
DTEND;TZID=Europe/Zurich:20260402T173000
SUMMARY:Day shift\\, unit 3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260403-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260403T080000
DTEND;TZID=Europe/Zurich:20260403T173000
SUMMARY:Day shift\\, unit 3 (weekend)
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260404-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260404T080000
DTEND;TZID=Europe/Zurich:20260404T203000
SUMMARY:Long shift\\, unit 3 (weekend)
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260405-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260405T080000
DTEND;TZID=Europe/Zurich:20260405T173000
SUMMARY:Day shift\\, unit 3 (weekend)
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260406-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260406T080000
DTEND;TZID=Europe/Zurich:20260406T203000
SUMMARY:Long shift\\, unit 3 (weekend)
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260407-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260407T071500
DTEND;TZID=Europe/Zurich:20260407T173000
SUMMARY:Day shift\\, unit 3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260409-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260409T071500
DTEND;TZID=Europe/Zurich:20260409T203000
SUMMARY:Long shift\\, unit 2
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260410-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260410T071500
DTEND;TZID=Europe/Zurich:20260410T173000
SUMMARY:Day shift\\, unit 2
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260413-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260413T090000
DTEND;TZID=Europe/Zurich:20260413T190000
SUMMARY:T1 shift
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260416-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260416T200000
DTEND;TZID=Europe/Zurich:20260417T081500
SUMMARY:Night shift\\, units 1-3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260417-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260417T200000
DTEND;TZID=Europe/Zurich:20260418T083000
SUMMARY:Night shift\\, units 1-3 (weekend)
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260418-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260418T200000
DTEND;TZID=Europe/Zurich:20260419T083000
SUMMARY:Night shift\\, units 1-3 (weekend)
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260419-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260419T200000
DTEND;TZID=Europe/Zurich:20260420T081500
SUMMARY:Night shift\\, units 1-3
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260422-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260422T071500
DTEND;TZID=Europe/Zurich:20260422T203000
SUMMARY:Long shift\\, unit 2
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260423-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260423T071500
DTEND;TZID=Europe/Zurich:20260423T173000
SUMMARY:Day shift\\, unit 2
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260428-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;VALUE=DATE:20260428
DTEND;VALUE=DATE:20260429
SUMMARY:Vacation
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260429-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;VALUE=DATE:20260429
DTEND;VALUE=DATE:20260430
SUMMARY:Vacation
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260430-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;VALUE=DATE:20260430
DTEND;VALUE=DATE:20260501
SUMMARY:Vacation
DESCRIPTION:Source: example_data/5_Mars2026_26.03_30.04.2026.pdf\\nUploaded:
  2026-04-15 10:30 UTC\\nView your row: https://pdf2calendar.example.com/sou
 rce/0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef/01234
 56789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
END:VCALENDAR
"
`;

exports[`mergeIcs(): multi-month preservation byte stability: same inputs → byte-identical output 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
PRODID:-//pdf2calendar//EN
CALSCALE:GREGORIAN
METHOD:PUBLISH
BEGIN:VTIMEZONE
TZID:Europe/Zurich
X-LIC-LOCATION:Europe/Zurich
BEGIN:STANDARD
DTSTART:19961027T030000
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
TZNAME:CET
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:19810329T020000
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
TZNAME:CEST
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
UID:0123456789abcdef-20260310-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260310T071500
DTEND;TZID=Europe/Zurich:20260310T173000
SUMMARY:Day shift\\, unit 2
DESCRIPTION:Source: test.pdf\\nUploaded: 2026-04-15 10:30 UTC\\nView your row
 : https://pdf2calendar.example.com/source/0123456789abcdef0123456789abcdef
 0123456789abcdef0123456789abcdef/0123456789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
UID:0123456789abcdef-20260415-0@pdf2calendar
DTSTAMP:20260415T103000Z
DTSTART;TZID=Europe/Zurich:20260415T071500
DTEND;TZID=Europe/Zurich:20260415T203000
SUMMARY:Long shift\\, unit 3
DESCRIPTION:Source: test.pdf\\nUploaded: 2026-04-15 10:30 UTC\\nView your row
 : https://pdf2calendar.example.com/source/0123456789abcdef0123456789abcdef
 0123456789abcdef0123456789abcdef/0123456789abcdef.png
STATUS:CONFIRMED
TRANSP:OPAQUE
END:VEVENT
END:VCALENDAR
"
`;
